# auralux

./: CMakeLists.txt  LICENSE  README.md
data/ejudge_tests/: 01  03  04  05  06  07  09
data/game_runner_configs/: example_config.txt  example_runner_config.txt
data/maps/: ffa_4_players_03.txt  ffa_4_players_map_01.txt  ffa_4_players_map_02.txt  pvp_map_01.txt  pvp_map_02.txt  pvp_map_03.txt  pvp_map_04.txt  pvp_map_05.txt  pvp_map_06.txt  pvp_map_07.txt  pvp_map_08.txt  pvp_map_09.txt
data/tournament_runner_configs/: example_tournament_config.txt
